fixed w3 markup validations and reduced svg sizes to increase loading speed, also updated scrollbar styles to support firefox

--- a/css/base.css
+++ b/css/base.css
@@ -97,24 +97,44 @@
 
 /* === GENERALS === */
 
-::-webkit-scrollbar {
-	width: var(--scrollbar-width);
-	height: var(--scrollbar-width);
+.scroller {
+	overflow-y: scroll;
 }
 
-::-webkit-scrollbar-track {
+@-moz-document url-prefix() {
+	.scroller {
+		scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
+		scrollbar-width: thin;
+	}
+}
+
+.scroller::-webkit-scrollbar {
+	width: var(--scrollbar-width);
+}
+
+.scroller::-webkit-scrollbar-track {
 	background: var(--scrollbar-track-color);
 }
 
-::-webkit-scrollbar-thumb {
+.scroller::-webkit-scrollbar-thumb {
 	background: var(--scrollbar-thumb-color);
 }
 
-::-webkit-scrollbar-thumb:hover {
+.scroller::-webkit-scrollbar-thumb:hover {
 	background: var(--scrollbar-thumb-hover-color);
 }
 
+.scroller::-moz-selection {
+	background: var(--secondary-clr);
+	color: var(--tertiary-clr);
+}
+
 ::selection {
+	background: var(--secondary-clr);
+	color: var(--tertiary-clr);
+}
+
+::-moz-selection {
 	background: var(--secondary-clr);
 	color: var(--tertiary-clr);
 }
@@ -185,6 +205,14 @@ h4,
 h5,
 p {
 	margin: 0;
+}
+
+/* html {
+	overflow: hidden;
+} */
+
+* {
+	overflow: hidden;
 }
 
 body {
